
syntax = "proto3";

package ga4gh_task_ref;

import "task_execution.proto";

message Worker {
  string id = 1;
  map<string,bool> active = 2;
  map<string,bool> assigned = 4;
  ga4gh_task_exec.Resources resources = 5;
  int64 last_ping = 6;
}

message Assignment {
  ga4gh_task_exec.Job job = 1;
  string auth = 2;
}

message UpdateWorkerRequest {
  // ID of the worker
  string id = 1;
  // Description of CPU, RAM, etc.
  ga4gh_task_exec.Resources resources = 2;
  // Hostname of the worker host.
  string hostname  = 3;
  // States of all jobs in the worker: job ID -> State
  map<string, ga4gh_task_exec.State> states = 4;
}

message UpdateWorkerResponse {
  // New jobs which have been assigned to this worker.
  repeated Assignment assigned = 3;
  // IDs of jobs assigned to this worker that were canceled.
  repeated string canceled = 4;
}

message UpdateJobLogsRequest {
  string id = 1;
  int64 step = 2;
  ga4gh_task_exec.JobLog log = 4;
  string worker_id = 5;
}
message UpdateJobLogsResponse {}

message QueuedTaskInfoRequest {
  int32 max_tasks = 1;
}

message QueuedTaskInfo {
  repeated string inputs = 1;
  ga4gh_task_exec.Resources resources = 2;
}


/**
 * Scheduler Service
 */
service Scheduler {
  rpc GetQueueInfo(QueuedTaskInfoRequest) returns(stream QueuedTaskInfo) {};
  rpc UpdateJobLogs(UpdateJobLogsRequest) returns (UpdateJobLogsResponse) {};
  rpc UpdateWorker(UpdateWorkerRequest) returns (UpdateWorkerResponse) {};
}
